--- a/store-frontend/app/views/spree/products/show.html.erb
+++ b/store-frontend/app/views/spree/products/show.html.erb
@@ -45,3 +45,4 @@
     </div>
   </div>
 <% end %>
+<br /><center><a href="<%= @ads['url'] %>"><img src="data:image/png;base64,<%= @ads['base64'] %>" /></a></center>
